2012-05-19  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c, gpasm/gperror.c: ixed bug #3528221 -
    gpasm generates the pagesel code for one page devices,
    generate relocation code for movlp instruction

2012-05-16  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/Makefile.am, gplink/Makefile.am, gputils/Makefile.am:
    fixed bug #3517180 - Out-of-source-tree builds fail,
    thanx to Raphael Neider for the patfch
  * gpasm/Makefile.in, gplink/Makefile.in, gputils/Makefile.in:
    regenerated

2012-05-15  Marko Kohtala  <marko.kohtala@gmail.com>
  * libgputils/gpcofflink.c (gp_cofflink_patch_addr): Bug #3526882 fix
  relocation of RELOCT_BRA for pic14e.
  * gpasm/directive.c (do_insn): Bug #3526882 fix use of RELOCT_CONDBRA in
  place of RELOCT_BRA for pic14e "bra" instruction.

2012-04-27  Marko Kohtala  <marko.kohtala@gmail.com>
  * gpasm/cod.c (cod_write_symbols): Fix bug #3521796 reverting a change
  from revision 572.

2012-04-21  Borut Razem  <borutr@users.sourceforge.net>
  * gplink/lst.c:
    fixed bug #3519850 - gplink fails to find source - patch attached
  * include/stdhdr.h: updated copyright year

2012-04-20  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpopcode.c: fixed bug #3519667 - gpdasm fails to decove
    movlb on pic16f enhanced midrange
  * gputils/testsuite/test: fixed for sh

2012-03-14  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/gpasm.c, libgputils/gpwriteobj.c, libgputils/gpwriteobj.h:
    implemented enhancement request #3504111 - Generate coff file in
    absolute mode: added function gp_is_absolute_object() which detects
    if the object is absolute and set F_ABSOLUTE coff file headr flag

2012-03-12  Borut Razem  <borutr@users.sourceforge.net>
  * 16c58a_g.lkr, 16cr58b_g.lkr, 16f1507_g.lkr:
    MPLAB X IDE v1.10, mpasmx 5.42

2012-03-04  Borut Razem  <borutr@users.sourceforge.net>
  * gputils/gpdasm.c:
    applied patch #3496780: Typo in gpdasm help message