@@ -2,6 +2,9 @@
   * gpasm/directive.c, gpasm/gperror.c: ixed bug #3528221 -
     gpasm generates the pagesel code for one page devices,
     generate relocation code for movlp instruction
+  * gpasm/testsuite/gpasm.project/objasm/op14e.asm,
+    gpasm/testsuite/gpasm.project/objfiles/op14e.o:
+    added objfiles regression test for pic 14 bit enhanced devices
 
 2012-05-16  Borut Razem  <borutr@users.sourceforge.net>
   * gpasm/Makefile.am, gplink/Makefile.am, gputils/Makefile.am:
